traefik/pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-use-regex.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-use-regex
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: use-regex.localhost
      http:
        paths:
          - path: /test(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: whoami
                port:
                  number: 80
